[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/Button/button-export.png" type="Texture" id=1]
[ext_resource path="res://fonts/VT323-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/Button/button-pressed-export.png" type="Texture" id=3]
[ext_resource path="res://scenes/HUD.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
percent_visible = -1.0

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 1 )
text = "Tube world"
align = 1
uppercase = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.0
margin_top = -315.0
margin_right = 127.0
margin_bottom = -215.0
rect_scale = Vector2( 0.9, 0.7 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )

[node name="TextInButton" type="Label" parent="."]
margin_left = 202.0
margin_top = 419.0
margin_right = 282.0
margin_bottom = 459.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
